# legal_docs_redaction

./: Dockerfile  README.md  pyproject.toml
src/: ConvertToDocx.py  main.py  spacy_redaction.py  utils.py
src/docx_conversion/: ConvertToDocx.py
src/pdf_to_text/: OCR.py
src/redaction/: spacy_redaction.py
